Initial implementation for new wireframe.

--- a/simple-us/app.ipynb
+++ b/simple-us/app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -21,57 +21,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ipywidgets as widgets\n",
-    "from ipywidgets import Box\n",
-    "from ipywidgets import Tab\n",
-    "\n",
-    "from experiments import Experiments"
+    "%reload_ext autoreload"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class App(Tab):\n",
-    "    def __init__(self):\n",
-    "        super(Tab, self).__init__()\n",
-    "        \n",
-    "        # TODO: Replace these with proper widgets.\n",
-    "        self.experiment = Experiments()\n",
-    "        self.view = Box()\n",
-    "        self.about = Box()\n",
-    "\n",
-    "        self.children = [\n",
-    "            self.experiment,\n",
-    "            self.view,\n",
-    "            self.about\n",
-    "        ]\n",
-    "        self.set_title(0, \"Experiments\")\n",
-    "        self.set_title(1, \"View\")\n",
-    "        self.set_title(2, \"About\")\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90a54bece2c741f5a5f0a12b81c7f57c",
+       "model_id": "d44c2a1789ea4b21a151f45cd3042fdf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "App(children=(Experiments(), Box(), Box()), _titles={'0': 'Experiments', '1': 'View', '2': 'About'})"
+       "AppView(children=(Box(), ManageTabView(children=(ExperimentTableView(children=(SimpleTable(children=[Row(child…"
       ]
      },
      "metadata": {},
@@ -79,18 +49,53 @@
     }
    ],
    "source": [
-    "App()"
+    "from app import App\n",
+    "app = App()\n",
+    "# display(app.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "69c708d7e1c64cf980c69c02cd074af1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "DataTableHeader(children=['test'])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import ipyvuetify as vue\n",
+    "vue.DataTableHeader(children=[\"test\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ipymaterialui as mui\n",
-    "import ipywidgets as widgets"
+    "\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
