Some changes to experiment table.

--- a/simple-us/app.ipynb
+++ b/simple-us/app.ipynb
@@ -30,18 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d44c2a1789ea4b21a151f45cd3042fdf",
+       "model_id": "dcad9320a4ea4826976af38f446c18d8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "AppView(children=(Box(), ManageTabView(children=(ExperimentTableView(children=(SimpleTable(children=[Row(child…"
+       "AppView(children=(Box(), ManageTabView(children=(ExperimentTableView(children=(Table(children=[TableHead(child…"
       ]
      },
      "metadata": {},
