--- a/simple-us/app.ipynb
+++ b/simple-us/app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,18 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0df07a05f0764233a6f1bf381133b9a7",
+       "model_id": "ece237b6257f434bbcd00836ac101aa4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "AppView(children=(Box(), ManageTabView(children=(ExperimentTableView(children=(Table(children=[TableHead(child…"
+       "AppView(children=(Tabs(centered=True, children=[Tab(component=None, label='Create', value=Box()), Tab(componen…"
       ]
      },
      "metadata": {},
@@ -42,70 +42,6 @@
    "source": [
     "from app import App\n",
     "app = App()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69c708d7e1c64cf980c69c02cd074af1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "DataTableHeader(children=['test'])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import ipyvuetify as vue\n",
-    "vue.DataTableHeader(children=[\"test\"])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n"
    ]
   },
   {
