--- a/simple-us/app.ipynb
+++ b/simple-us/app.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,18 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ece237b6257f434bbcd00836ac101aa4",
+       "model_id": "925d462ce70b4befbfd7ee00f2240e6b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "AppView(children=(Tabs(centered=True, children=[Tab(component=None, label='Create', value=Box()), Tab(componen…"
+       "AppView(children=[Tabs(centered=True, children=[Tab(component=None, label=CustomText(children='Create', style_…"
       ]
      },
      "metadata": {},
