--- a/simple-us/app.ipynb
+++ b/simple-us/app.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -12,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,13 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1aaae021fd374b01b732bcda51d97e1e",
+       "model_id": "d0baa767d18549a8899a79ced076f60a",
        "version_major": 2,
        "version_minor": 0
       },
